DevOCL/src/objects/CLQ_Junction_RuleRegs__c.object
<CustomObject>
    <description>Junction object between Rules and Regulations</description>
    <fields>
        <fullName>CLQ_Domain_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Domain Rule</label>
        <referenceTo>CLQ_Domain_Rule__c</referenceTo>
        <relationshipLabel>Rule Regulations</relationshipLabel>
        <relationshipName>Rule_Regulations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CLQ_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used an External ID for Junction RuleRegs object.</description>
        <externalId>true</externalId>
        <label>External_Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CLQ_Regulation__c</fullName>
        <description>This field implements the master-detail relationship between the master Regulation object and the detail CLQ_Junction_RuleRegs object</description>
        <label>Regulation</label>
        <referenceTo>CLQ_Regulation__c</referenceTo>
        <relationshipLabel>Associated Rules</relationshipLabel>
        <relationshipName>CLQ_Junction_RuleRegs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CLQ_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field implements the master-detail relationship between the master Rules object and the detail CLQ_Junction_RuleRegs object</description>
        <label>Rule</label>
        <referenceTo>CLQ_Rule__c</referenceTo>
        <relationshipLabel>Associated Regulations</relationshipLabel>
        <relationshipName>CLQ_Junction_RuleRegs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Rule Regulation</label>
    <nameField>
        <displayFormat>RR# {00000000}</displayFormat>
        <label>Rule Regulation No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Regulations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>